[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/art/ui/button/BttnConfiguracion.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/button/BttnConfiguracionPressed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelLimestone.png" type="Texture" id=3]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=4]
[ext_resource path="res://assets/art/ui/button/BttnRegresar.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/button/BttnRegresarPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/button/BttnCreateGame.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/panel/PanelWood.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/button/BttnCreateGamePressed.png" type="Texture" id=9]
[ext_resource path="res://src/UI/MenuLayer/Menus/ConfigureGame.gd" type="Script" id=10]
[ext_resource path="res://assets/theme/profile_name.tres" type="Theme" id=11]

[node name="ConfigureGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
next_menu = "CharacterSelection"
prev_menu = "ProfileView"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -269.0
margin_right = 462.0
margin_bottom = 269.0
texture = ExtResource( 3 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -388.0
margin_top = 40.0
margin_right = 388.0
margin_bottom = 75.0
theme = ExtResource( 4 )
text = "Configuración de partida"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.5
margin_top = -178.0
margin_right = 399.5
margin_bottom = 146.0
texture = ExtResource( 8 )
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.5
margin_top = -139.0
margin_right = 347.5
margin_bottom = 139.0
alignment = 1

[node name="ModeContainer" type="NinePatchRect" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 99.0
margin_right = 695.0
margin_bottom = 179.0
rect_min_size = Vector2( 695, 80 )

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer/ModeContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.5
margin_right = 152.0
margin_bottom = 17.5
theme = ExtResource( 4 )
text = "Modo"
align = 1
valign = 1

[node name="Mode" type="OptionButton" parent="NinePatchRect/NinePatchRect/VBoxContainer/ModeContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -29.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 43 )
theme = ExtResource( 11 )
text = "Singleplayer"
align = 1
items = [ "Singleplayer", null, false, 0, null, "Multiplayer", null, false, 1, null ]
selected = 0

[node name="DifficultyContainer" type="NinePatchRect" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
visible = false
margin_top = 141.0
margin_right = 695.0
margin_bottom = 221.0
rect_min_size = Vector2( 695, 80 )

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer/DifficultyContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.5
margin_right = 112.0
margin_bottom = 17.5
theme = ExtResource( 4 )
text = "Dificultad"
align = 1
valign = 1

[node name="Difficulty" type="OptionButton" parent="NinePatchRect/NinePatchRect/VBoxContainer/DifficultyContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -29.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 43 )
theme = ExtResource( 11 )
text = "Fácil"
align = 1
items = [ "Fácil", null, false, 0, null, "Normal", null, false, 1, null, "Difícil", null, false, 2, null ]
selected = 0

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -104.0
margin_right = 388.0
margin_bottom = -40.0
alignment = 1

[node name="BttnRegresar" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_right = 256.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="BttnCreateGame" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )

[node name="BttnConfiguracion" type="TextureButton" parent="NinePatchRect/Buttons"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[connection signal="pressed" from="NinePatchRect/Buttons/BttnRegresar" to="." method="_on_BttnRegresar_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnCreateGame" to="." method="_on_BttnCreateGame_pressed"]
[connection signal="pressed" from="NinePatchRect/Buttons/BttnConfiguracion" to="." method="_on_BttnConfiguracion_pressed"]
